--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-player": "^3.3.3",
     "react-router-dom": "^7.9.3",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.17.0",
